# contract-verification-migrator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  progress_bar.rs  verification.rs
