[package]
name = "contract-verification-migrator"
version = "0.1.0"
edition = "2021"
description  = "Copy contract verification from one block-explorer to another"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.11", features = ["derive"]}
console = "0.15.7"
eyre = "0.6.11"
foundry-block-explorers = "0.1.2"
futures = "0.3.30"
hex = "0.4.3"
indicatif = "0.17.7"
serde_json = "1.0.108"
tokio ={ version = "1.35.1", features = ["full"] }

